--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.ShowStarshipActivity"></activity>
+        <activity android:name=".ui.ShowFilmActivity"></activity>
+        <activity android:name=".ui.ShowSpecieActivity" />
+        <activity android:name=".ui.ShowVehicleActivity" />
+        <activity android:name=".ui.ShowStarshipActivity" />
         <activity android:name=".ui.ShowPlanetActivity" />
         <activity android:name=".ui.ShowPeopleActivity" />
         <activity android:name=".ui.MainActivity">
