--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.fragment.ShowFilmFragment"></activity>
+        <activity android:name=".ui.fragment.ShowFilmFragment" />
         <activity android:name=".ui.fragment.ShowSpecieFragment" />
         <activity android:name=".ui.fragment.ShowVehicleFragment" />
         <activity android:name=".ui.fragment.ShowStarshipFragment" />
